// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`async store integration 1`] = `
<div>
  <div
    className="redux"
  >
    foo
  </div>
  <div
    className="custom"
  >
    custom
  </div>
</div>
`;

exports[`createStore advanced props 1`] = `
<div>
  foo
</div>
`;

exports[`createStore debug mode from options 1`] = `<div />`;

exports[`createStore debug mode with setDebug method 1`] = `<div />`;

exports[`createStore should be able to configure store key on window 1`] = `<div />`;

exports[`createStore simple props 1`] = `
<div>
  foo
</div>
`;

exports[`simple store integration 1`] = `
<div>
  <div
    className="redux"
  >
    foo
  </div>
  <div
    className="custom"
  >
    custom
  </div>
</div>
`;
